# GyroServer

./: .gitignore  CMakeLists.txt  GyroClient_fr_FR.ts  README.md  resources.qrc
src/apps/: main.cpp  stream_frames.cpp  stream_media.cpp
src/apps/gl/: CustomOpenGLWidget.cpp  CustomOpenGLWidget.h
src/decoder/: avdecoder.hpp
src/shaders/: texture.frag  texture.vert
src/stream/: streaming_udp.cpp  streaming_udp.h
src/tcp/: server.cpp  server.hpp
src/types/: types.hpp
src/udp/: client.cpp  client.hpp  server.cpp  server.hpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
